--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
@@ -17,6 +18,7 @@
     "lottie-react": "^2.4.0",
     "lucide-react": "^0.468.0",
     "next": "15.1.1",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
